remove the padding from the FSPHPlist ul element
git-svn-id: file:///media/Data/Repos/SquidgyCMS/trunk@24 2fba2af6-d892-294d-8f6b-3ba2989aa45f

--- a/FSPHP.css
+++ b/FSPHP.css
@@ -8,7 +8,7 @@ table	{ border-collapse: collapse; }
 .f_left	{ float: left; }
 .f_right	{ float: right; }
 
-.PHPlist	{ display: table; width: 100%; }
+.PHPlist	{ display: table; width: 100%; padding: 0; }
 .PHPlist li	{ display: table-cell; float: left; width: 25%; }
 
 .PHPtable	{ border: none; width: 100%; }
