--- a/SquidgyCMS.css
+++ b/SquidgyCMS.css
@@ -8,7 +8,7 @@ a:hover, a:visited:hover, a:active	{ color: red; }
 h2	{ margin: 0; font-weight: normal; font-size: 2.6em; }
 h3	{ font-weight: normal; margin: 0; }
 h4	{ margin-top: 0; margin-bottom: 0.5em; }
-p, form	{ margin: 0; }
+form	{ margin: 0; }
 img	{ border: none; }
 table	{ border-collapse: collapse; text-align: left; }
 input	{ font-family: Verdana, Arial, Helvetica, sans-serif; }
