profile image maker: add a debug box, make the preview box resize itself as scaling seemingly can't be done, make the moving of the select box work
git-svn-id: file:///media/Data/Repos/SquidgyCMS/trunk@243 2fba2af6-d892-294d-8f6b-3ba2989aa45f

--- a/Modules/Profile/image.css
+++ b/Modules/Profile/image.css
@@ -53,4 +53,12 @@
 #previewbox {
 	height: 120px;
 	width: 100px;
+	float: right;
 }
+
+#debugbox {
+	height: 220px;
+	width: 200px;
+	float: right;
+}
+
