Documentation: particularly how to use SquidgyML
git-svn-id: file:///media/Data/Repos/SquidgyCMS/trunk@324 2fba2af6-d892-294d-8f6b-3ba2989aa45f

--- a/Documentation/style.css
+++ b/Documentation/style.css
@@ -1,4 +1,5 @@
 code, dt	{ font-family: monospace; font-size: 1.25em; }
 code, dt	{ margin-top: 0.2em; }
+code.block	{ display: block; margin-left: 12px; }
 dd	{ margin-left: 25px; display: block; font-size: 0..95em; }
 
