--- a/SquidgyCMS.css
+++ b/SquidgyCMS.css
@@ -27,7 +27,7 @@ input	{ font-family: Verdana, Arial, Helvetica, sans-serif; }
 #contact_tbl .text_in	{ width: 401px; font-family: Verdana, Arial, Helvetica, sans-serif; margin-left: 1px; }
 #contact_tbl .button	{ width: 238px; margin: 2px 0 0 3px; line-height: 1.6em; padding: 0; font-family: Tahoma, sans-serif; }
 
-ul.tick_list	{ width: 550px; margin-top: 8px; height: 95px; margin-bottom: 12px; display: block; }
+ul.tick_list	{ width: 550px; margin-top: 8px; margin-bottom: 12px; display: block; overflow: auto; }
 ul.tick_list li	{ vertical-align: middle; line-height: 1.5em; display: block; float: left; width: 170px; }
 .tick_list .tick	{ margin: 3px 6px; width: 13px; }
 
