Add the beginnings of a completely new Files module.
This files module is intended to repalce the current Docs module, which
is so full of spaghetti it's insane. I'm hoping that I can build it in
such a way that adding functionality by subclassing it will be easy.

I'm planning to build the new Gallery module in this manner. The
alternative might be to have this module support some form of dynamic
templating.

I've added a selection of icons from the Oxygen set
(http://www.oxygen-icons.org/), which are freely (and I believe suitably)
licensed, though this probably needs review.

--- a/src/SquidgyCMS.css
+++ b/src/SquidgyCMS.css
@@ -130,3 +130,18 @@ ul.tick_list li	{ vertical-align: middle; line-height: 1.5em; display: block; fl
 	font-family: monospace;
 	font-size: 0.9em;
 }
+
+/* Files Block */
+
+ul.files-listing li {
+	float: left;
+	list-style-type: none;
+	width: 200px;
+}
+ul.files-listing li img {
+	display: block;
+	margin: 0 auto;
+}
+ul.files-listing li p {
+	text-align: center;
+}
