Add an Inform module to improve action feedback to the user.
Eventually this will replace the print_success function, but as yet
I've not removed all the traces of that. For the moment it adds to
its use in the admin module, and replaces it as the default success
feedback responder.

The module use $_SESSION to store arrays of data which will be shown
to the user the next time that it is called to be shown. Note that
calling for a show returns the information as a string, rather than
printing it directly, and cleans the data. The data is cleaned so that
the session array doesn't grow indefinitely, and so the user doesn't
see the same messages over and over.

--- a/src/SquidgyCMS.css
+++ b/src/SquidgyCMS.css
@@ -159,3 +159,25 @@ ul.gallery-listing li div.img div img {
 	outline: 1px solid silver;
 	outline-offset: 3px;
 }
+
+/* Inform Listings */
+
+ul.inform {
+	margin: 7px 0;
+	outline-width: 1px;
+	outline-style: solid;
+	padding: 7px;
+}
+ul.inform.error {
+	background-color: #FF8080;
+	color: #800000;
+	outline-color: red;
+}
+ul.inform.info {
+	background-color: #B4FFB0;
+	color: #005000;
+	outline-color: green;
+}
+ul.inform li {
+	list-style-type: none;
+}
